fix(v0.9.1): launch target JVM with --add-opens for JDK 17+ context locate
Diagnostic CI output (commit 449af34) revealed the agent's
Thread/field reflective walk in ClassLoadedContextProvider fails
silently on JDK 17 because java.base private fields (Thread.target
etc) are encapsulated. The provider then returns 0 contexts and
TomcatScanner falls back to class-loaded mode emitting low-precision
class-* findings instead of tomcat-*/spring-* findings.

ProfileFixture now starts the test-target JVM with the four
--add-opens flags the agent needs. README + zh-CN README document
the same requirement for production deployments.